tests/baselines/reference/parserStrictMode7.errors.txt
tests/cases/conformance/parser/ecmascript5/StrictMode/parserStrictMode7.ts(2,3): error TS2356: An arithmetic operand must be of type 'any', 'number' or an enum type.


==== tests/cases/conformance/parser/ecmascript5/StrictMode/parserStrictMode7.ts (1 errors) ====
    "use strict";
    ++eval;
      ~~~~
!!! error TS2356: An arithmetic operand must be of type 'any', 'number' or an enum type.